--- a/demo/index.html
+++ b/demo/index.html
@@ -560,7 +560,7 @@
             </div>
          </div>
       </div>
-      <section class="space-top" id="testi-sec">
+      <!-- <section class="space-top" id="testi-sec">
          <div class="container">
             <div class="testi-box-area">
                <div class="row g-0 flex-row-reverse">
@@ -609,7 +609,7 @@
                </div>
             </div>
          </div>
-      </section>
+      </section> -->
       <div class="gallery-sec1" data-bg-src="assets/img/bg/gallery_bg_1.jpg">
          <div class="container space-top">
             <div class="title-area text-center">
@@ -681,7 +681,7 @@
                         <div class="box-icon"><i class="fa-solid fa-location-dot"></i></div>
                         <div class="box-content">
                            <h3 class="box-title">Address</h3>
-                           <p class="box-text">Ekosodin, Benin-City, Edo-state.</p>
+                           <p class="box-text">Okunbor street Etete GRA Benin city.</p>
                         </div>
                      </div>
                   </div>
@@ -689,17 +689,17 @@
                      <div class="footer-contact">
                         <div class="box-icon"><i class="fa-solid fa-phone"></i></div>
                         <div class="box-content">
-                           <h3 class="box-title">Address</h3>
-                           <p class="box-text"><a href="mailto:">support@Mimejoe.com.ng</a> <a href="tel:08139920653">09130318781<br>08139920653</a></p>
+                           <h3 class="box-title">Email Address</h3>
+                           <p class="box-text"><a href="mailto: support@Mimejoe.com.ng">support@Mimejoe.com.ng</a> <a href="mailto:Mimejoegroup@yahoo.com">Mimejoegroup@yahoo.com</a></p>
                         </div>
                      </div>
                   </div>
                   <div class="col-auto">
                      <div class="footer-contact">
-                        <div class="box-icon"><i class="fa-solid fa-clock"></i></div>
+                        <div class="box-icon"><i class="fa-solid fa-phone"></i></div>
                         <div class="box-content">
-                           <h3 class="box-title">Address</h3>
-                           <p class="box-text">Mon-Fri : 08.00 am-06.00 pm<br>Sunday Closed</p>
+                           <h3 class="box-title">Contact</h3>
+                           <p class="box-text"><a href="tel:09130318781">09130318781</a> <a href="tel:08139920653">08139920653</a></p>
                         </div>
                      </div>
                   </div>
