--- a/demo/service.html
+++ b/demo/service.html
@@ -298,7 +298,7 @@
                         <div class="box-icon"><i class="fa-solid fa-location-dot"></i></div>
                         <div class="box-content">
                            <h3 class="box-title">Address</h3>
-                           <p class="box-text">Ekosodin, Benin-City, Edo-state.</p>
+                           <p class="box-text">Okunbor street Etete GRA Benin city.</p>
                         </div>
                      </div>
                   </div>
@@ -306,17 +306,17 @@
                      <div class="footer-contact">
                         <div class="box-icon"><i class="fa-solid fa-phone"></i></div>
                         <div class="box-content">
-                           <h3 class="box-title">Address</h3>
-                           <p class="box-text"><a href="mailto:">support@Mimejoe.com.ng</a> <a href="tel:08139920653">09130318781<br>08139920653</a></p>
+                           <h3 class="box-title">Email Address</h3>
+                           <p class="box-text"><a href="mailto: support@Mimejoe.com.ng">support@Mimejoe.com.ng</a> <a href="mailto:Mimejoegroup@yahoo.com">Mimejoegroup@yahoo.com</a></p>
                         </div>
                      </div>
                   </div>
                   <div class="col-auto">
                      <div class="footer-contact">
-                        <div class="box-icon"><i class="fa-solid fa-clock"></i></div>
+                        <div class="box-icon"><i class="fa-solid fa-phone"></i></div>
                         <div class="box-content">
-                           <h3 class="box-title">Address</h3>
-                           <p class="box-text">Mon-Fri : 08.00 am-06.00 pm<br>Sunday Closed</p>
+                           <h3 class="box-title">Contact</h3>
+                           <p class="box-text"><a href="tel:09130318781">09130318781</a> <a href="tel:08139920653">08139920653</a></p>
                         </div>
                      </div>
                   </div>
