--- a/demo/about.html
+++ b/demo/about.html
@@ -244,11 +244,11 @@
                <div class="swiper-wrapper">
                   <div class="swiper-slide">
                      <div class="th-team team-card">
-                        <div class="box-img"><img src="assets/img/team/team_1_1.jpg" alt="Team"></div>
+                        <div class="box-img"><img src="assets/img/joel.jpeg" alt="Team"></div>
                         <div class="box-content">
                            <div class="media-body">
-                              <h3 class="box-title"><a href="team-details.html">Nova Midnight</a></h3>
-                              <span class="box-desig">Clean Expert</span>
+                              <h3 class="box-title"><a href="team-details.html">Iniabasi Oscar Joel</a></h3>
+                              <span class="box-desig">Founder</span>
                            </div>
                            <div class="team-social">
                               <button class="icon-btn"><i class="far fa-plus"></i></button>
@@ -259,71 +259,11 @@
                   </div>
                   <div class="swiper-slide">
                      <div class="th-team team-card">
-                        <div class="box-img"><img src="assets/img/team/team_1_2.jpg" alt="Team"></div>
+                        <div class="box-img"><img src="assets/img/fav.jpeg" alt="Team"></div>
                         <div class="box-content">
                            <div class="media-body">
-                              <h3 class="box-title"><a href="team-details.html">Jospher Fros</a></h3>
-                              <span class="box-desig">Clean Expert</span>
-                           </div>
-                           <div class="team-social">
-                              <button class="icon-btn"><i class="far fa-plus"></i></button>
-                              <div class="th-social"><a target="_blank" href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a> <a target="_blank" href="https://linkedin.com/"><i class="fab fa-linkedin-in"></i></a> <a target="_blank" href="https://twitter.com/"><i class="fab fa-twitter"></i></a></div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="swiper-slide">
-                     <div class="th-team team-card">
-                        <div class="box-img"><img src="assets/img/team/team_1_3.jpg" alt="Team"></div>
-                        <div class="box-content">
-                           <div class="media-body">
-                              <h3 class="box-title"><a href="team-details.html">Isabella Ember</a></h3>
-                              <span class="box-desig">Clean Expert</span>
-                           </div>
-                           <div class="team-social">
-                              <button class="icon-btn"><i class="far fa-plus"></i></button>
-                              <div class="th-social"><a target="_blank" href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a> <a target="_blank" href="https://linkedin.com/"><i class="fab fa-linkedin-in"></i></a> <a target="_blank" href="https://twitter.com/"><i class="fab fa-twitter"></i></a></div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="swiper-slide">
-                     <div class="th-team team-card">
-                        <div class="box-img"><img src="assets/img/team/team_1_4.jpg" alt="Team"></div>
-                        <div class="box-content">
-                           <div class="media-body">
-                              <h3 class="box-title"><a href="team-details.html">Gabriel Turner</a></h3>
-                              <span class="box-desig">Clean Expert</span>
-                           </div>
-                           <div class="team-social">
-                              <button class="icon-btn"><i class="far fa-plus"></i></button>
-                              <div class="th-social"><a target="_blank" href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a> <a target="_blank" href="https://linkedin.com/"><i class="fab fa-linkedin-in"></i></a> <a target="_blank" href="https://twitter.com/"><i class="fab fa-twitter"></i></a></div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="swiper-slide">
-                     <div class="th-team team-card">
-                        <div class="box-img"><img src="assets/img/team/team_1_5.jpg" alt="Team"></div>
-                        <div class="box-content">
-                           <div class="media-body">
-                              <h3 class="box-title"><a href="team-details.html">Benjamin Davis</a></h3>
-                              <span class="box-desig">Clean Expert</span>
-                           </div>
-                           <div class="team-social">
-                              <button class="icon-btn"><i class="far fa-plus"></i></button>
-                              <div class="th-social"><a target="_blank" href="https://facebook.com/"><i class="fab fa-facebook-f"></i></a> <a target="_blank" href="https://linkedin.com/"><i class="fab fa-linkedin-in"></i></a> <a target="_blank" href="https://twitter.com/"><i class="fab fa-twitter"></i></a></div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="swiper-slide">
-                     <div class="th-team team-card">
-                        <div class="box-img"><img src="assets/img/team/team_1_6.jpg" alt="Team"></div>
-                        <div class="box-content">
-                           <div class="media-body">
-                              <h3 class="box-title"><a href="team-details.html">Ava Dankin</a></h3>
-                              <span class="box-desig">Clean Expert</span>
+                              <h3 class="box-title"><a href="team-details.html">Aiyedun Favour</a></h3>
+                              <span class="box-desig">co-founder</span>
                            </div>
                            <div class="team-social">
                               <button class="icon-btn"><i class="far fa-plus"></i></button>
@@ -373,7 +313,7 @@
                         <div class="box-icon"><i class="fa-solid fa-location-dot"></i></div>
                         <div class="box-content">
                            <h3 class="box-title">Address</h3>
-                           <p class="box-text">Ekosodin, Benin-City, Edo-state.</p>
+                           <p class="box-text">Okunbor street Etete GRA Benin city.</p>
                         </div>
                      </div>
                   </div>
@@ -381,17 +321,17 @@
                      <div class="footer-contact">
                         <div class="box-icon"><i class="fa-solid fa-phone"></i></div>
                         <div class="box-content">
-                           <h3 class="box-title">Address</h3>
-                           <p class="box-text"><a href="mailto:">support@Mimejoe.com.ng</a> <a href="tel:08139920653">09130318781<br>08139920653</a></p>
+                           <h3 class="box-title">Email Address</h3>
+                           <p class="box-text"><a href="mailto: support@Mimejoe.com.ng">support@Mimejoe.com.ng</a> <a href="mailto:Mimejoegroup@yahoo.com">Mimejoegroup@yahoo.com</a></p>
                         </div>
                      </div>
                   </div>
                   <div class="col-auto">
                      <div class="footer-contact">
-                        <div class="box-icon"><i class="fa-solid fa-clock"></i></div>
+                        <div class="box-icon"><i class="fa-solid fa-phone"></i></div>
                         <div class="box-content">
-                           <h3 class="box-title">Address</h3>
-                           <p class="box-text">Mon-Fri : 08.00 am-06.00 pm<br>Sunday Closed</p>
+                           <h3 class="box-title">Contact</h3>
+                           <p class="box-text"><a href="tel:09130318781">09130318781</a> <a href="tel:08139920653">08139920653</a></p>
                         </div>
                      </div>
                   </div>
