--- a/demo/contact.html
+++ b/demo/contact.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
-   <!-- Mirrored from html.themeholy.com/Mimejoe/demo/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 29 Jun 2024 15:06:36 GMT -->
+   <!-- Mirrored from html.themeholy.com/Earl Mimejoe Global concept Ltd./demo/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 29 Jun 2024 15:06:36 GMT -->
    <head>
       <meta charset="utf-8">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <title>Mimejoe - Cleaning Services - Contact Us</title>
-      <meta name="author" content="Mimejoe">
-      <meta name="description" content="Mimejoe - Cleaning Services HTML Template">
-      <meta name="keywords" content="Mimejoe - Cleaning Services HTML Template">
+      <title>Earl Mimejoe Global concept Ltd. - Cleaning Services - Contact Us</title>
+      <meta name="author" content="Earl Mimejoe Global concept Ltd.">
+      <meta name="description" content="Earl Mimejoe Global concept Ltd. - Cleaning Services HTML Template">
+      <meta name="keywords" content="Earl Mimejoe Global concept Ltd. - Cleaning Services HTML Template">
       <meta name="robots" content="INDEX,FOLLOW">
       <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
       <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicons/apple-icon-57x57.png">
@@ -56,7 +56,7 @@
       <div class="th-menu-wrapper">
          <div class="th-menu-area text-center">
             <button class="th-menu-toggle"><i class="fal fa-times"></i></button>
-            <div class="mobile-logo"><a href="index.html"><img src="assets/img/logo.svg" alt="Mimejoe"></a></div>
+            <div class="mobile-logo"><a href="index.html"><img src="assets/img/logo.svg" alt="Earl Mimejoe Global concept Ltd."></a></div>
             <div class="th-mobile-menu">
                <ul>
                   <li class="menu-item-has-children">
@@ -79,7 +79,7 @@
                      <div class="header-links">
                         <ul>
                            <li class="d-none d-sm-inline-block"><i class="fas fa-phone"></i><b>Phone:</b><a href="tel:09130318781">09130318781</a></li>
-                           <li class="d-none d-sm-inline-block"><i class="fas fa-envelope"></i><b>Email:</b><a href="mailto:support@mimejoe.com.ng">support@mimejoe.com.ng</a></li>
+                           <li class="d-none d-sm-inline-block"><i class="fas fa-envelope"></i><b>Email:</b><a href="mailto:searlmimejoeglobalconceptltd@yahoo.com">searlmimejoeglobalconceptltd@yahoo.com</a></li>
                         </ul>
                      </div>
                   </div>
@@ -100,7 +100,7 @@
                <div class="container">
                   <div class="row align-items-center justify-content-between">
                      <div class="col-auto">
-                        <div class="header-logo"><a href="index.html"><img src="assets/img/mimejoe-logo.png" alt="Mimejoe" width="100"></a></div>
+                        <div class="header-logo"><a href="index.html"><img src="assets/img/Earl Mimejoe Global concept Ltd.-logo.png" alt="Earl Mimejoe Global concept Ltd." width="100"></a></div>
                      </div>
                      <div class="col-`auto d-none d-lg-inline-block">
                         <nav class="main-menu d-none d-lg-inline-block">
@@ -172,7 +172,7 @@
                      <div class="box-icon bg-title"><i class="fa-light fa-envelope"></i></div>
                      <div class="media-body">
                         <h3 class="box-title">Email Address</h3>
-                        <p class="box-text"><a href="mailto:support@mimejoe.com.ng">support@mimejoe.com.ng</a> <a href="mailto:support@mimejoe.com.ng">Mimejoegroup@yahoo.com</a></p>
+                        <p class="box-text"><a href="mailto:searlmimejoeglobalconceptltd@yahoo.com">searlmimejoeglobalconceptltd@yahoo.com</a> <a href="mailto:searlmimejoeglobalconceptltd@yahoo.com">Earl Mimejoe Global concept Ltd.group@yahoo.com</a></p>
                      </div>
                   </div>
                </div>
@@ -189,7 +189,7 @@
       </div>
       <div class="space-bottom">
          <div class="container">
-            <form action="https://html.themeholy.com/Mimejoe/demo/mail.php" method="POST" class="team-contact-form input-white ajax-contact">
+            <form action="https://html.themeholy.com/Earl Mimejoe Global concept Ltd./demo/mail.php" method="POST" class="team-contact-form input-white ajax-contact">
                <h4 class="form-title">Make An Appointment</h4>
                <div class="row">
                   <div class="form-group col-sm-6"><input type="text" class="form-control" name="name" id="name" placeholder="Your Name"> <i class="far fa-user"></i></div>
@@ -232,7 +232,7 @@
                         <div class="box-icon"><i class="fa-solid fa-phone"></i></div>
                         <div class="box-content">
                            <h3 class="box-title">Email Address</h3>
-                           <p class="box-text"><a href="mailto: support@Mimejoe.com.ng">support@Mimejoe.com.ng</a> <a href="mailto:Mimejoegroup@yahoo.com">Mimejoegroup@yahoo.com</a></p>
+                           <p class="box-text"><a href="mailto: searlmimejoeglobalconceptltd@yahoo.com">searlmimejoeglobalconceptltd@yahoo.com</a> <a href="mailto:Earl Mimejoe Global concept Ltd.group@yahoo.com">Earl Mimejoe Global concept Ltd.group@yahoo.com</a></p>
                         </div>
                      </div>
                   </div>
@@ -254,7 +254,7 @@
                   <div class="col-md-6 col-xl-auto">
                      <div class="widget footer-widget">
                         <div class="th-widget-about">
-                           <div class="about-logo"><a href="index.html"><img src="assets/img/mimejoe-logo.png" alt="Mimejoe" width="200"></a></div>
+                           <div class="about-logo"><a href="index.html"><img src="assets/img/Earl Mimejoe Global concept Ltd.-logo.png" alt="Earl Mimejoe Global concept Ltd." width="200"></a></div>
                            <p class="about-text">We're your trusted a cleaning company, dedicated to any kind of a consistently delivering exceptional all category good cleaning service.</p>
                            <div class="th-social"><a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a> <a href="https://www.twitter.com/"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a> <a href="https://www.whatsapp.com/"><i class="fab fa-whatsapp"></i></a></div>
                         </div>
@@ -305,7 +305,7 @@
          </div>
          <div class="copyright-wrap">
             <div class="container text-center">
-               <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2024 <a href="index.html">Mimejoe</a>. All Rights Reserved.</p>
+               <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2024 <a href="index.html">Earl Mimejoe Global concept Ltd.</a>. All Rights Reserved.</p>
             </div>
          </div>
       </footer>
@@ -316,5 +316,5 @@
       </div>
       <script src="assets/js/vendor/jquery-3.7.1.min.js"></script><script src="assets/js/app.min.js"></script><script src="assets/js/main.js"></script>
    </body>
-   <!-- Mirrored from html.themeholy.com/Mimejoe/demo/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 29 Jun 2024 15:06:36 GMT -->
+   <!-- Mirrored from html.themeholy.com/Earl Mimejoe Global concept Ltd./demo/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 29 Jun 2024 15:06:36 GMT -->
 </html>
