--- a/demo/index.html
+++ b/demo/index.html
@@ -3,10 +3,10 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <title>Earl Mimejoe Global concept Ltd. - Cleaning Services</title>
-      <meta name="author" content="Earl Mimejoe Global concept Ltd.">
-      <meta name="description" content="Earl Mimejoe Global concept Ltd. - Cleaning Service">
-      <meta name="keywords" content="Earl Mimejoe Global concept Ltd. - Cleaning Service">
+      <title>Earl Mimejoe - Cleaning Services</title>
+      <meta name="author" content="Earl Mimejoe">
+      <meta name="description" content="Earl Mimejoe - Cleaning Service">
+      <meta name="keywords" content="Earl Mimejoe - Cleaning Service">
       <meta name="robots" content="INDEX,FOLLOW">
       <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
       <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicons/apple-icon-57x57.png">
@@ -73,7 +73,7 @@
       <div class="th-menu-wrapper">
          <div class="th-menu-area text-center">
             <button class="th-menu-toggle"><i class="fal fa-times"></i></button>
-            <div class="mobile-logo"><a href="index.html"><img src="assets/img/Earl Mimejoe Global concept Ltd.-logo.png" alt="Earl Mimejoe Global concept Ltd." width="100" height="150"></a></div>
+            <div class="mobile-logo"><a href="index.html"><img src="assets/img/Earl Mimejoe-logo.png" alt="Earl Mimejoe" width="100" height="150"></a></div>
             <div class="th-mobile-menu">
                <ul>
                   <li class="menu-item-has-children">
@@ -96,7 +96,7 @@
                      <div class="header-links">
                         <ul>
                            <li class="d-none d-sm-inline-block"><i class="fas fa-phone"></i><b>Phone:</b><a href="tel:09130318781">09130318781</a></li>
-                           <li class="d-none d-sm-inline-block"><i class="fas fa-envelope"></i><b>Email:</b><a href="mailto:searlmimejoeglobalconceptltd@yahoo.com">searlmimejoeglobalconceptltd@yahoo.com</a></li>
+                           <li class="d-none d-sm-inline-block"><i class="fas fa-envelope"></i><b>Email:</b><a href="mailto:earlmimejoe@yahoo.com">earlmimejoe@yahoo.com</a></li>
                         </ul>
                      </div>
                   </div>
@@ -117,7 +117,7 @@
                <div class="container">
                   <div class="row align-items-center justify-content-between">
                      <div class="col-auto">
-                        <div class="header-logo"><a href="index.html"><img src="assets/img/Earl Mimejoe Global concept Ltd.-logo.png" alt="Earl Mimejoe Global concept Ltd." width="100"></a></div>
+                        <div class="header-logo"><a href="index.html"><img src="assets/img/Earl Mimejoe-logo.png" alt="Earl Mimejoe" width="100"></a></div>
                      </div>
                      <div class="col-`auto d-none d-lg-inline-block">
                         <nav class="main-menu d-none d-lg-inline-block">
@@ -199,7 +199,7 @@
                            <div class="box-icon"><img src="assets/img/icon/service_card_1.svg" alt="Icon"></div>
                            <h3 class="box-title"><a href="service-details.html">DEEP CLEANING </a></h3>
                            <p class="box-text">The  objective of cleaning is not just to clean but to feel happiness living within the environment. So, we dream of having a clean house but a true dream is living in there clean. 
-                              The Earl Mimejoe Global concept Ltd. Group is ready to go deeper in giving your interior a sparkling look.</p>
+                              The Earl Mimejoe Group is ready to go deeper in giving your interior a sparkling look.</p>
                            <a href="service-details.html" class="th-btn btn-sm">See More<i class="fas fa-arrow-up-right ms-2"></i></a>
                         </div>
                      </div>
@@ -210,7 +210,7 @@
                         <div class="box-content">
                            <div class="box-icon"><img src="assets/img/icon/service_card_2.svg" alt="Icon"></div>
                            <h3 class="box-title"><a href="service-details.html">POST CONSTRUCTION CLEANING</a></h3>
-                           <p class="box-text">Confidence and true happiness do not just end in building or renovating a house but in finding it clean and serene while moving in. let the Earl Mimejoe Global concept Ltd. Group clear the debris from your post-construction and renovation waste. 
+                           <p class="box-text">Confidence and true happiness do not just end in building or renovating a house but in finding it clean and serene while moving in. let the Earl Mimejoe Group clear the debris from your post-construction and renovation waste. 
                               We are ready to give your house your intending look.</p>
                            <a href="service-details.html" class="th-btn btn-sm">See More<i class="fas fa-arrow-up-right ms-2"></i></a>
                         </div>
@@ -244,7 +244,7 @@
                         <div class="box-content">
                            <div class="box-icon"><img src="assets/img/icon/service_card_5.svg" alt="Icon"></div>
                            <h3 class="box-title"><a href="service-details.html">FUMIGATION</a></h3>
-                           <p class="box-text">Fumigation is a pest control method in which a pesticide gas or vapour is released into the air or injected into the soil to kill or eliminate pests. Peace of mind should be your priority, kill them before they kill your peace. Earl Mimejoe Global concept Ltd. Group is always available for your peace of mind.</p>
+                           <p class="box-text">Fumigation is a pest control method in which a pesticide gas or vapour is released into the air or injected into the soil to kill or eliminate pests. Peace of mind should be your priority, kill them before they kill your peace. Earl Mimejoe Group is always available for your peace of mind.</p>
                            <a href="service-details.html" class="th-btn btn-sm">See More<i class="fas fa-arrow-up-right ms-2"></i></a>
                         </div>
                      </div>
@@ -255,7 +255,7 @@
                         <div class="box-content">
                            <div class="box-icon"><img src="assets/img/icon/service_card_6.svg" alt="Icon"></div>
                            <h3 class="box-title"><a href="service-details.html">LAUNDERING</a></h3>
-                           <p class="box-text">Earl Mimejoe Global concept Ltd. laundry service is an advanced service with excellent, optimized and quick delivery system. We undergo free pickup and delivery anywhere.</p>
+                           <p class="box-text">Earl Mimejoe laundry service is an advanced service with excellent, optimized and quick delivery system. We undergo free pickup and delivery anywhere.</p>
                            <a href="service-details.html" class="th-btn btn-sm">See More<i class="fas fa-arrow-up-right ms-2"></i></a>
                         </div>
                      </div>
@@ -266,7 +266,7 @@
                         <div class="box-content">
                            <div class="box-icon"><img src="assets/img/icon/service_card_6.svg" alt="Icon"></div>
                            <h3 class="box-title"><a href="service-details.html">CAR WASH</a></h3>
-                           <p class="box-text">Amidst the joy of purchasing a luxurious automobile true happiness is driving your car after its been wash. The Earl Mimejoe Global concept Ltd. Group is ready to give you the experience of riding the waves of a clean car.</p>
+                           <p class="box-text">Amidst the joy of purchasing a luxurious automobile true happiness is driving your car after its been wash. The Earl Mimejoe Group is ready to give you the experience of riding the waves of a clean car.</p>
                            <a href="service-details.html" class="th-btn btn-sm">See More<i class="fas fa-arrow-up-right ms-2"></i></a>
                         </div>
                      </div>
@@ -299,9 +299,9 @@
                <div class="col-xl-6">
                   <div class="title-area mb-32">
                      <span class="sub-title"><img src="assets/img/theme-img/title_icon.svg" alt="shape">About Us</span>
-                     <h2 class="sec-title">Earl Mimejoe Global concept Ltd.<span class="text-theme"></span> Group</h2>
-                     <p class="sec-text">The Earl Mimejoe Global concept Ltd. group is a fast-pricing entrepreneur platform which offers a reputable and professional cleaning services ensuring hospitable and service environment to its client.</p>
-                     <p class="sec-text">A cleaner environment supports a healthier, more productive and profitable lifestyle. With high level of professionalism and hands on approach along with experience the Earl Mimejoe Global concept Ltd. group as a professional cleaning services cut across different services.</p>
+                     <h2 class="sec-title">Earl Mimejoe<span class="text-theme"></span> Group</h2>
+                     <p class="sec-text">The Earl Mimejoe group is a fast-pricing entrepreneur platform which offers a reputable and professional cleaning services ensuring hospitable and service environment to its client.</p>
+                     <p class="sec-text">A cleaner environment supports a healthier, more productive and profitable lifestyle. With high level of professionalism and hands on approach along with experience the Earl Mimejoe group as a professional cleaning services cut across different services.</p>
                   </div>
                   <div class="about-feature-wrap">
                      <div class="about-feature">
@@ -360,7 +360,7 @@
                      </div>
                   </div>
                   <div class="col-xl-5">
-                     <form action="https://html.themeholy.com/Earl Mimejoe Global concept Ltd./demo/mail.php" method="POST" class="contact-form1 ajax-contact">
+                     <form action="https://html.themeholy.com/Earl Mimejoe/demo/mail.php" method="POST" class="contact-form1 ajax-contact">
                         <h3 class="form-title">Make Appoinment</h3>
                         <div class="input-wrap">
                            <div class="row">
@@ -690,7 +690,7 @@
                         <div class="box-icon"><i class="fa-solid fa-phone"></i></div>
                         <div class="box-content">
                            <h3 class="box-title">Email Address</h3>
-                           <p class="box-text"><a href="mailto: searlmimejoeglobalconceptltd@yahoo.com">searlmimejoeglobalconceptltd@yahoo.com</a> <a href="mailto:Earl Mimejoe Global concept Ltd.group@yahoo.com">Earl Mimejoe Global concept Ltd.group@yahoo.com</a></p>
+                           <p class="box-text"><a href="mailto: earlmimejoe@yahoo.com">earlmimejoe@yahoo.com</a> <a href="mailto:Earl Mimejoegroup@yahoo.com">Earl Mimejoegroup@yahoo.com</a></p>
                         </div>
                      </div>
                   </div>
@@ -712,7 +712,7 @@
                   <div class="col-md-6 col-xl-auto">
                      <div class="widget footer-widget">
                         <div class="th-widget-about">
-                           <div class="about-logo"><a href="index.html"><img src="assets/img/Earl Mimejoe Global concept Ltd.-logo.png" alt="Earl Mimejoe Global concept Ltd." width="200"></a></div>
+                           <div class="about-logo"><a href="index.html"><img src="assets/img/Earl Mimejoe-logo.png" alt="Earl Mimejoe" width="200"></a></div>
                            <p class="about-text">We're your trusted a cleaning company, dedicated to any kind of a consistently delivering exceptional all category good cleaning service.</p>
                            <div class="th-social"><a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a> <a href="https://www.twitter.com/"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a> <a href="https://www.whatsapp.com/"><i class="fab fa-whatsapp"></i></a></div>
                         </div>
@@ -763,7 +763,7 @@
          </div>
          <div class="copyright-wrap">
             <div class="container text-center">
-               <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2024 <a href="index.html">Earl Mimejoe Global concept Ltd.</a>. All Rights Reserved.</p>
+               <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2024 <a href="index.html">Earl Mimejoe</a>. All Rights Reserved.</p>
             </div>
          </div>
       </footer>
@@ -774,5 +774,5 @@
       </div>
       <script src="assets/js/vendor/jquery-3.7.1.min.js"></script><script src="assets/js/app.min.js"></script><script src="assets/js/main.js"></script>
    </body>
-   <!-- Mirrored from html.themeholy.com/Earl Mimejoe Global concept Ltd./demo/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 29 Jun 2024 15:05:59 GMT -->
+   <!-- Mirrored from html.themeholy.com/Earl Mimejoe/demo/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 29 Jun 2024 15:05:59 GMT -->
 </html>
