--- a/demo/about.html
+++ b/demo/about.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
-   <!-- Mirrored from html.themeholy.com/Earl Mimejoe Global concept Ltd./demo/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 29 Jun 2024 15:06:25 GMT -->
+   <!-- Mirrored from html.themeholy.com/Earl Mimejoe/demo/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 29 Jun 2024 15:06:25 GMT -->
    <head>
       <meta charset="utf-8">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <title>Earl Mimejoe Global concept Ltd. - Cleaning Services HTML Template - About Us</title>
-      <meta name="author" content="Earl Mimejoe Global concept Ltd.">
-      <meta name="description" content="Earl Mimejoe Global concept Ltd. - Cleaning Services HTML Template">
-      <meta name="keywords" content="Earl Mimejoe Global concept Ltd. - Cleaning Services HTML Template">
+      <title>Earl Mimejoe - Cleaning Services HTML Template - About Us</title>
+      <meta name="author" content="Earl Mimejoe">
+      <meta name="description" content="Earl Mimejoe - Cleaning Services HTML Template">
+      <meta name="keywords" content="Earl Mimejoe - Cleaning Services HTML Template">
       <meta name="robots" content="INDEX,FOLLOW">
       <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
       <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicons/apple-icon-57x57.png">
@@ -75,7 +75,7 @@
       <div class="th-menu-wrapper">
          <div class="th-menu-area text-center">
             <button class="th-menu-toggle"><i class="fal fa-times"></i></button>
-            <div class="mobile-logo"><a href="index.html"><img src="assets/img/logo.svg" alt="Earl Mimejoe Global concept Ltd."></a></div>
+            <div class="mobile-logo"><a href="index.html"><img src="assets/img/logo.svg" alt="Earl Mimejoe"></a></div>
             <div class="th-mobile-menu">
                <ul>
                   <li class="menu-item-has-children">
@@ -98,7 +98,7 @@
                      <div class="header-links">
                         <ul>
                            <li class="d-none d-sm-inline-block"><i class="fas fa-phone"></i><b>Phone:</b><a href="tel:09130318781">09130318781</a></li>
-                           <li class="d-none d-sm-inline-block"><i class="fas fa-envelope"></i><b>Email:</b><a href="mailto:searlmimejoeglobalconceptltd@yahoo.com">searlmimejoeglobalconceptltd@yahoo.com</a></li>
+                           <li class="d-none d-sm-inline-block"><i class="fas fa-envelope"></i><b>Email:</b><a href="mailto:earlmimejoe@yahoo.com">earlmimejoe@yahoo.com</a></li>
                         </ul>
                      </div>
                   </div>
@@ -119,7 +119,7 @@
                <div class="container">
                   <div class="row align-items-center justify-content-between">
                      <div class="col-auto">
-                        <div class="header-logo"><a href="index.html"><img src="assets/img/Earl Mimejoe Global concept Ltd.-logo.png" alt="Earl Mimejoe Global concept Ltd." width="100"></a></div>
+                        <div class="header-logo"><a href="index.html"><img src="assets/img/Earl Mimejoe-logo.png" alt="Earl Mimejoe" width="100"></a></div>
                      </div>
                      <div class="col-`auto d-none d-lg-inline-block">
                         <nav class="main-menu d-none d-lg-inline-block">
@@ -180,9 +180,9 @@
                <div class="col-xl-6">
                   <div class="title-area mb-32">
                      <span class="sub-title"><img src="assets/img/theme-img/title_icon.svg" alt="shape">About Us</span>
-                     <h2 class="sec-title">Earl Mimejoe Global concept Ltd.<span class="text-theme"></span>Group</h2>
-                     <p class="sec-text">The Earl Mimejoe Global concept Ltd. group is a fast-pricing entrepreneur platform which offers a reputable and professional cleaning services ensuring hospitable and service environment to its client.</p>
-                     <p class="sec-text">A cleaner environment supports a healthier, more productive and profitable lifestyle. With high level of professionalism and hands on approach along with experience the Earl Mimejoe Global concept Ltd. group as a professional cleaning services cut across different services.</p>
+                     <h2 class="sec-title">Earl Mimejoe<span class="text-theme"></span>Group</h2>
+                     <p class="sec-text">The Earl Mimejoe group is a fast-pricing entrepreneur platform which offers a reputable and professional cleaning services ensuring hospitable and service environment to its client.</p>
+                     <p class="sec-text">A cleaner environment supports a healthier, more productive and profitable lifestyle. With high level of professionalism and hands on approach along with experience the Earl Mimejoe group as a professional cleaning services cut across different services.</p>
                   </div>
                   <div class="about-feature-wrap">
                      <div class="about-feature">
@@ -322,7 +322,7 @@
                         <div class="box-icon"><i class="fa-solid fa-phone"></i></div>
                         <div class="box-content">
                            <h3 class="box-title">Email Address</h3>
-                           <p class="box-text"><a href="mailto: searlmimejoeglobalconceptltd@yahoo.com">searlmimejoeglobalconceptltd@yahoo.com</a> <a href="mailto:Earl Mimejoe Global concept Ltd.group@yahoo.com">Earl Mimejoe Global concept Ltd.group@yahoo.com</a></p>
+                           <p class="box-text"><a href="mailto: earlmimejoe@yahoo.com">earlmimejoe@yahoo.com</a> <a href="mailto:Earl Mimejoegroup@yahoo.com">Earl Mimejoegroup@yahoo.com</a></p>
                         </div>
                      </div>
                   </div>
@@ -344,7 +344,7 @@
                   <div class="col-md-6 col-xl-auto">
                      <div class="widget footer-widget">
                         <div class="th-widget-about">
-                           <div class="about-logo"><a href="index.html"><img src="assets/img/Earl Mimejoe Global concept Ltd.-logo.png" alt="Earl Mimejoe Global concept Ltd." width="200"></a></div>
+                           <div class="about-logo"><a href="index.html"><img src="assets/img/Earl Mimejoe-logo.png" alt="Earl Mimejoe" width="200"></a></div>
                            <p class="about-text">We're your trusted a cleaning company, dedicated to any kind of a consistently delivering exceptional all category good cleaning service.</p>
                            <div class="th-social"><a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a> <a href="https://www.twitter.com/"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a> <a href="https://www.whatsapp.com/"><i class="fab fa-whatsapp"></i></a></div>
                         </div>
@@ -395,7 +395,7 @@
          </div>
          <div class="copyright-wrap">
             <div class="container text-center">
-               <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2024 <a href="index.html">Earl Mimejoe Global concept Ltd.</a>. All Rights Reserved.</p>
+               <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2024 <a href="index.html">Earl Mimejoe</a>. All Rights Reserved.</p>
             </div>
          </div>
       </footer>
@@ -406,5 +406,5 @@
       </div>
       <script src="assets/js/vendor/jquery-3.7.1.min.js"></script><script src="assets/js/app.min.js"></script><script src="assets/js/main.js"></script>
    </body>
-   <!-- Mirrored from html.themeholy.com/Earl Mimejoe Global concept Ltd./demo/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 29 Jun 2024 15:06:25 GMT -->
+   <!-- Mirrored from html.themeholy.com/Earl Mimejoe/demo/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 29 Jun 2024 15:06:25 GMT -->
 </html>
