--- a/demo/service.html
+++ b/demo/service.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
-   <!-- Mirrored from html.themeholy.com/Earl Mimejoe Global concept Ltd./demo/service.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 29 Jun 2024 15:06:25 GMT -->
+   <!-- Mirrored from html.themeholy.com/Earl Mimejoe/demo/service.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 29 Jun 2024 15:06:25 GMT -->
    <head>
       <meta charset="utf-8">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <title>Earl Mimejoe Global concept Ltd. - Cleaning Services HTML Template - Services</title>
-      <meta name="author" content="Earl Mimejoe Global concept Ltd.">
-      <meta name="description" content="Earl Mimejoe Global concept Ltd. - Cleaning Services HTML Template">
-      <meta name="keywords" content="Earl Mimejoe Global concept Ltd. - Cleaning Services HTML Template">
+      <title>Earl Mimejoe - Cleaning Services HTML Template - Services</title>
+      <meta name="author" content="Earl Mimejoe">
+      <meta name="description" content="Earl Mimejoe - Cleaning Services HTML Template">
+      <meta name="keywords" content="Earl Mimejoe - Cleaning Services HTML Template">
       <meta name="robots" content="INDEX,FOLLOW">
       <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
       <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicons/apple-icon-57x57.png">
@@ -75,7 +75,7 @@
       <div class="th-menu-wrapper">
          <div class="th-menu-area text-center">
             <button class="th-menu-toggle"><i class="fal fa-times"></i></button>
-            <div class="mobile-logo"><a href="index.html"><img src="assets/img/logo.svg" alt="Earl Mimejoe Global concept Ltd."></a></div>
+            <div class="mobile-logo"><a href="index.html"><img src="assets/img/logo.svg" alt="Earl Mimejoe"></a></div>
             <div class="th-mobile-menu">
                <ul>
                   <li class="menu-item-has-children">
@@ -157,7 +157,7 @@
                <div class="container">
                   <div class="row align-items-center justify-content-between">
                      <div class="col-auto">
-                        <div class="header-logo"><a href="index.html"><img src="assets/img/Earl Mimejoe Global concept Ltd.-logo.png" alt="Earl Mimejoe Global concept Ltd." width="100"></a></div>
+                        <div class="header-logo"><a href="index.html"><img src="assets/img/Earl Mimejoe-logo.png" alt="Earl Mimejoe" width="100"></a></div>
                      </div>
                      <div class="col-`auto d-none d-lg-inline-block">
                         <nav class="main-menu d-none d-lg-inline-block">
@@ -213,7 +213,7 @@
                         <div class="box-icon"><img src="assets/img/icon/service_card_1.svg" alt="Icon"></div>
                         <h3 class="box-title"><a href="service-details.html">DEEP CLEANING</a></h3>
                         <p class="box-text">The  objective of cleaning is not just to clean but to feel happiness living within the environment. So, we dream of having a clean house but a true dream is living in there clean. 
-                           The Earl Mimejoe Global concept Ltd. Group is ready to go deeper in giving your interior a sparkling look.</p>
+                           The Earl Mimejoe Group is ready to go deeper in giving your interior a sparkling look.</p>
                         <a href="service-details.html" class="th-btn btn-sm">See More<i class="fas fa-arrow-up-right ms-2"></i></a>
                      </div>
                   </div>
@@ -224,7 +224,7 @@
                      <div class="box-content">
                         <div class="box-icon"><img src="assets/img/icon/service_card_2.svg" alt="Icon"></div>
                         <h3 class="box-title"><a href="service-details.html">POST CONSTRUCTION CLEANING</a></h3>
-                        <p class="box-text">Confidence and true happiness do not just end in building or renovating a house but in finding it clean and serene while moving in. let the Earl Mimejoe Global concept Ltd. Group clear the debris from your post-construction and renovation waste. We are ready to give your house your intending look.</p>
+                        <p class="box-text">Confidence and true happiness do not just end in building or renovating a house but in finding it clean and serene while moving in. let the Earl Mimejoe Group clear the debris from your post-construction and renovation waste. We are ready to give your house your intending look.</p>
                         <a href="service-details.html" class="th-btn btn-sm">See More<i class="fas fa-arrow-up-right ms-2"></i></a>
                      </div>
                   </div>
@@ -257,7 +257,7 @@
                      <div class="box-content">
                         <div class="box-icon"><img src="assets/img/icon/service_card_5.svg" alt="Icon"></div>
                         <h3 class="box-title"><a href="service-details.html">FUMIGATION</a></h3>
-                        <p class="box-text">Fumigation is a pest control method in which a pesticide gas or vapour is released into the air or injected into the soil to kill or eliminate pests. Peace of mind should be your priority, kill them before they kill your peace. Earl Mimejoe Global concept Ltd. Group is always available for your peace of mind.</p>
+                        <p class="box-text">Fumigation is a pest control method in which a pesticide gas or vapour is released into the air or injected into the soil to kill or eliminate pests. Peace of mind should be your priority, kill them before they kill your peace. Earl Mimejoe Group is always available for your peace of mind.</p>
                         <a href="service-details.html" class="th-btn btn-sm">See More<i class="fas fa-arrow-up-right ms-2"></i></a>
                      </div>
                   </div>
@@ -268,7 +268,7 @@
                      <div class="box-content">
                         <div class="box-icon"><img src="assets/img/icon/service_card_6.svg" alt="Icon"></div>
                         <h3 class="box-title"><a href="service-details.html">LAUNDERING</a></h3>
-                        <p class="box-text">Earl Mimejoe Global concept Ltd. laundry service is an advanced service with excellent, optimized and quick delivery system. We undergo free pickup and delivery anywhere.</p>
+                        <p class="box-text">Earl Mimejoe laundry service is an advanced service with excellent, optimized and quick delivery system. We undergo free pickup and delivery anywhere.</p>
                         <a href="service-details.html" class="th-btn btn-sm">See More<i class="fas fa-arrow-up-right ms-2"></i></a>
                      </div>
                   </div>
@@ -279,7 +279,7 @@
                      <div class="box-content">
                         <div class="box-icon"><img src="assets/img/icon/service_card_6.svg" alt="Icon"></div>
                         <h3 class="box-title"><a href="service-details.html">CAR WASH</a></h3>
-                        <p class="box-text">Amidst the joy of purchasing a luxurious automobile true happiness is driving your car after its been wash. The Earl Mimejoe Global concept Ltd. Group is ready to give you the experience of riding the waves of a clean car.</p>
+                        <p class="box-text">Amidst the joy of purchasing a luxurious automobile true happiness is driving your car after its been wash. The Earl Mimejoe Group is ready to give you the experience of riding the waves of a clean car.</p>
                         <a href="service-details.html" class="th-btn btn-sm">See More<i class="fas fa-arrow-up-right ms-2"></i></a>
                      </div>
                   </div>
@@ -307,7 +307,7 @@
                         <div class="box-icon"><i class="fa-solid fa-phone"></i></div>
                         <div class="box-content">
                            <h3 class="box-title">Email Address</h3>
-                           <p class="box-text"><a href="mailto: earlmimejoeglobalconceptltd@yahoo.com">earlmimejoeglobalconceptltd@yahoo.com</a> <a href="mailto:Earl Mimejoe Global concept Ltd.group@yahoo.com">Earl Mimejoe Global concept Ltd.group@yahoo.com</a></p>
+                           <p class="box-text"><a href="mailto: earlmimejoeglobalconceptltd@yahoo.com">earlmimejoeglobalconceptltd@yahoo.com</a> <a href="mailto:Earl Mimejoegroup@yahoo.com">Earl Mimejoegroup@yahoo.com</a></p>
                         </div>
                      </div>
                   </div>
@@ -329,7 +329,7 @@
                   <div class="col-md-6 col-xl-auto">
                      <div class="widget footer-widget">
                         <div class="th-widget-about">
-                           <div class="about-logo"><a href="index.html"><img src="assets/img/Earl Mimejoe Global concept Ltd.-logo.png" alt="Earl Mimejoe Global concept Ltd." width="200"></a></div>
+                           <div class="about-logo"><a href="index.html"><img src="assets/img/Earl Mimejoe-logo.png" alt="Earl Mimejoe" width="200"></a></div>
                            <p class="about-text">We're your trusted a cleaning company, dedicated to any kind of a consistently delivering exceptional all category good cleaning service.</p>
                            <div class="th-social"><a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a> <a href="https://www.twitter.com/"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a> <a href="https://www.whatsapp.com/"><i class="fab fa-whatsapp"></i></a></div>
                         </div>
@@ -380,7 +380,7 @@
          </div>
          <div class="copyright-wrap">
             <div class="container text-center">
-               <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2024 <a href="index.html">Earl Mimejoe Global concept Ltd.</a>. All Rights Reserved.</p>
+               <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2024 <a href="index.html">Earl Mimejoe</a>. All Rights Reserved.</p>
             </div>
          </div>
       </footer>
@@ -391,5 +391,5 @@
       </div>
       <script src="assets/js/vendor/jquery-3.7.1.min.js"></script><script src="assets/js/app.min.js"></script><script src="assets/js/main.js"></script>
    </body>
-   <!-- Mirrored from html.themeholy.com/Earl Mimejoe Global concept Ltd./demo/service.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 29 Jun 2024 15:06:25 GMT -->
+   <!-- Mirrored from html.themeholy.com/Earl Mimejoe/demo/service.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 29 Jun 2024 15:06:25 GMT -->
 </html>
